<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:title="@string/action_select_all_vi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_uncheck_all"
        android:orderInCategory="100"
        android:title="@string/action_uncheck_all_vi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_remove_vi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="100"
        android:title="@string/action_add_item_vi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_item"
        android:orderInCategory="100"
        android:title="@string/action_edit_item_vi"
        app:showAsAction="never" />
</menu>
